# chacha20-rs

./: Cargo.toml  README.md
benches/: mod.rs
src/: algo.rs  lib.rs  quad_simd.rs  simd.rs  util.rs
tests/: differential.rs
