[package]
name = "chacha20"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]

# benchmarking library
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mod"
harness = false

[profile.bench]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
