[package]
name = "chacha20"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# property testing
proptest = "1.5.0"
# differential chacha20 implementation
rust-crypto-chacha20 = { version = "0.9.1", package = "chacha20" }

[[bench]]
name = "mod"
harness = false

[profile.bench]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
